fixed navbar fixed overlapping

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31,6 +31,7 @@ body {
     font-weight: 600;
     background-color: #2F3136;
     color: #fff;
+    padding-top: 50px;
 }
 
 @media (min-width: 1012px) {
