--- a/public/css/navbarDefault.css
+++ b/public/css/navbarDefault.css
@@ -1,4 +1,4 @@
-.navbar {
+.navbar, .navbar-fixed-top {
     margin-bottom: 0px;
     background-color: #282a2d;
 }
